# cpp_demo

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  cpp.Dockerfile  hello-daocloud.cpp
include/: factorial.hpp
src/: factorial.cpp  main.cpp
tests/: test_factorial.cpp  test_factorial_fail.cpp
